2012-05-26  Matthew Garrett  <mjg@redhat.com>

	* grub-core/term/efi/console.c (grub_efi_console_init): Set text mode.
	(grub_efi_console_fini): Likewise.
	* grub-core/video/efi_gop.c (framebuffer): New field offscreen.
	(grub_video_gop_fill_mode_info): Rename to ...
	(grub_video_gop_fill_real_mode_info): ... this.
	(grub_video_gop_fill_mode_info): New function.
	(grub_video_gop_setup): Setup double framebuffer.
	(grub_video_gop_get_info_and_fini): Use original framebuffer.
	Free offscreen.
	(grub_video_gop_swap_buffers): Copy framebuffer.
	(grub_video_gop_fini): Free offscreen buffer.
	* include/grub/efi/graphics_output.h (grub_efi_gop_blt_operation_t):
	New enum.
	(grub_efi_gop_blt_pixel): New struct.

2012-05-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* gentpl.py: Remove error disabling for objconv.

2012-05-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Remove -Wunitialized as it's not available on older
	compilers.

2012-05-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix extent overflow comparator.

	* grub-core/fs/hfsplus.c (grub_hfsplus_extkey_internal): Add type.
	(grub_hfsplus_read_block): Set type.
	(grub_hfsplus_cmp_extkey): Compare type.

2012-05-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-fstest.c (cmd_cmp): Fix stat'ing of wrong file.

2012-05-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/hfsplus.c (grub_hfsplus_label): Use found ptr rather
	than 0.

2012-05-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.am (starfield_DATA): Add dejavu_bold_14.pf2.
	(dejavu_bold_14.pf2): New target.

2012-05-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Fix djvu font detection.

2012-05-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/misc.c (grub_normal_print_device_info): Dsiplay
	ext* instead of ext2.

2012-05-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/term.c (read_terminal_list): Terminate the terminal
	name with \0.
